--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
@@ -14,18 +14,14 @@
         tools:context=".activity.LoginActivity">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/imageView9"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/login_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/asd" />
+            app:srcCompat="@drawable/ic_login" />
 
         <LinearLayout
             android:id="@+id/login_btn"
