--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/view_nothing.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/view_nothing.xml
@@ -20,8 +20,9 @@
 
         <TextView
             android:id="@+id/noT"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="아직 게시물이 존재하지 않습니다."
             android:textColor="@color/black"
             android:textStyle="bold" />
