--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
@@ -122,7 +122,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="회원탈퇴"
-                        android:textColor="@color/night_white"
+                        android:textColor="@color/colorAccent"
                         android:textSize="18sp" />
 
                 </LinearLayout>
