--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/values/themes.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/values/themes.xml
@@ -15,6 +15,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Theme.Opensourcelicense" parent="Theme.AppCompat.DayNight">
+        <item name="background">@color/night</item>
+        <item name="android:textColor">@color/night_white</item>
+    </style>
+
     <style name="ToolBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:background">@color/night</item>
 <!--        <item name="android:textColor">@color/night_white</item>-->
