--- a/Coin_kotlin/app/src/main/res/layout/item_source.xml
+++ b/Coin_kotlin/app/src/main/res/layout/item_source.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/night"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@id/contentFrame"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
             android:id="@+id/sourceNameT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:text="TextView"
             android:textSize="20sp"
             android:textStyle="bold" />
